sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:6: error: not found: value i
    temp = getValeur(i)
                     ^AlgShellSort:7: error: not found: value i
    var j=i
          ^